<resources>
    <string name="app_name">测试APP</string>
    <string name="title_activity_my_scrolling">MyScrollingActivity</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>
    <!--====================================================
    项目总体上的字符串 （原则：按模块起文件存储字符串）
   ===================================================-->
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="detail">详情</string>
    <string name="setting">设置</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <!--====================================================
  主页
 ===================================================-->
    <string name="ad">人生好比是海上的波浪，有时起有时落。莫愁前路无知己，天下谁人不识君</string>
    <string name="home_title">WELCOME</string>

    <!--====================================================
黑名单
===================================================-->
    <string name="add_black">新增黑名单</string>
    <string name="input_phone">请输入手机号</string>
    <string name="intercept_phone">拦截电话</string>
    <string name="intercept_message">拦截短信</string>
    <string name="intercept_all">拦截所有</string>
    <string name="black_add_contact">联系人</string>
    <string name="black_get_contact">直接获取</string>
    <string name="black_jump_contact">跳转获取</string>


    <!--====================================================
设置页面
===================================================-->
    <string name="setting_update_title">自动更新</string>
    <string name="setting_update_on">开启</string>
    <string name="setting_update_off">关闭</string>

    <string name="setting_black_title">黑名单拦截</string>
    <string name="setting_black_on">拦截开启</string>
    <string name="setting_black_off">拦截关闭</string>

    <string name="setting_address_title">归属地显示</string>
    <string name="setting_address_on">归属地显示开启</string>
    <string name="setting_address_off">归属地显示关闭</string>

    <string name="setting_style_title">归属地提示框风格</string>
    <string name="setting_style_1">半透明</string>
    <string name="setting_style_2">活力橙</string>
    <string name="setting_style_3">卫士蓝</string>
    <string name="setting_style_4">金属灰</string>
    <string name="setting_style_5">苹果绿</string>

    <string name="setting_location_title">归属地提示框显示位置</string>
    <string name="setting_location_bottom">设置归属地提示框的显示位置</string>
    <string name="setting_location_button">双击居中</string>
    <string name="setting_location_hint">按住提示框拖到任意位置\n按住手机返回键立即生效</string>

    <string name="setting_lock_title">程序锁</string>
    <string name="setting_lock_on">开启</string>
    <string name="setting_lock_off">关闭</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
