<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ms="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/common_title"/>
    <com.kotlin.khum.mobilesafe.ui.widget.CheckableItem
        android:id="@+id/auto_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ms:topText="测试"
        ms:onText="自动更新已开启"
        ms:offText="自动更新已关闭"
        />
    <View
        android:layout_width="match_parent"
          android:layout_height="@dimen/line"
        android:background="@color/color_line"
          />
    <com.kotlin.khum.mobilesafe.ui.widget.CheckableItem
        android:id="@+id/intercept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ms:offText="@string/setting_black_off"
        ms:onText="@string/setting_black_on"
        ms:topText="@string/setting_black_title"
        />

</LinearLayout>