<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_background"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_20"
        android:text="@string/add_black"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/color_line"/>

    <EditText
        android:id="@+id/tv_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_input_number"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:maxLength="11"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:inputType="number"
        android:textColor="@color/color_444"
        android:textColorHint="#a0a0a0"
        android:textSize="@dimen/text_normal"
        android:includeFontPadding="false"
        android:hint="@string/input_phone"
        />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_12"
        android:paddingBottom="@dimen/dimen_12"
        android:orientation="horizontal"
        >

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/intercept_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:button="@null"
                android:background="@drawable/selector_radio"
                android:gravity="center"
                android:padding="@dimen/dimen_6"
                android:layout_marginLeft="@dimen/dimen_6"
                android:layout_marginRight="@dimen/dimen_6"
                android:text="@string/intercept_phone"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="@dimen/text_small"
                />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/intercept_msg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dimen_6"
                android:layout_marginRight="@dimen/dimen_6"
                android:button="@null"
                android:background="@drawable/selector_radio"
                android:padding="@dimen/dimen_6"
                android:text="@string/intercept_message"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="@dimen/text_small"
                />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/intercept_all"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dimen_6"
                android:layout_marginRight="@dimen/dimen_6"
                android:button="@null"
                android:background="@drawable/selector_radio"
                android:padding="@dimen/dimen_6"
                android:text="@string/intercept_all"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="@dimen/text_small"
                />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_8"
        >

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_12"
            android:padding="@dimen/dimen_12"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_12"
            android:layout_toLeftOf="@id/tv_confirm"
            android:padding="@dimen/dimen_12"
            android:text="@string/cancel"
            />

    </RelativeLayout>

</LinearLayout>
